--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@stenway/reliabletxt",
-  "version": "0.0.2",
+  "version": "0.1.0",
   "description": "Stefan John / Stenway / ReliableTXT.com / 2022",
   "homepage": "https://www.reliabletxt.com",
   "repository": "github:Stenway/ReliableTXT-TS",
@@ -10,21 +10,38 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "files": [
-    "/dist"
+    "/dist/src"
   ],
   "scripts": {
-    "build": "tsc"
+    "build": "tsc",
+    "lint": "eslint src",
+    "test": "tsc && jest --coverage"
   },
   "keywords": [
     "text file",
     "encoding",
     "utf-8",
     "utf8",
+    "utf-16",
+    "utf16",
+    "utf-32",
+    "utf32",
+    "codepoint",
+    "codepoints",
+    "txt",
+    "bom",
+    "byte-order-mark",
     "unicode"
   ],
   "author": "Stefan John",
   "license": "MIT",
   "devDependencies": {
+    "@types/jest": "^29.2.4",
+    "@typescript-eslint/eslint-plugin": "^5.47.1",
+    "@typescript-eslint/parser": "^5.47.1",
+    "eslint": "^8.30.0",
+    "jest": "^29.3.1",
+    "ts-jest": "^29.0.3",
     "typescript": "^4.8.4"
   }
 }
