--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@stenway/reliabletxt",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "Stefan John / Stenway / ReliableTXT.com / 2022",
   "homepage": "https://www.reliabletxt.com",
   "repository": "github:Stenway/ReliableTXT-TS",
@@ -31,7 +31,10 @@
     "txt",
     "bom",
     "byte-order-mark",
-    "unicode"
+    "unicode",
+    "base64",
+    "bytes",
+    "binary-file"
   ],
   "author": "Stefan John",
   "license": "MIT",
@@ -42,6 +45,8 @@
     "eslint": "^8.30.0",
     "jest": "^29.3.1",
     "ts-jest": "^29.0.3",
+    "ts-node": "^10.9.1",
+    "tsconfig-paths": "^4.1.2",
     "typescript": "^4.8.4"
   }
 }
