--- a/package.json
+++ b/package.json
@@ -1,17 +1,21 @@
 {
   "name": "@stenway/reliabletxt",
-  "version": "0.5.0",
-  "description": "Stefan John / Stenway / ReliableTXT.com / 2023",
+  "version": "0.6.0-beta.0",
+  "type": "module",
+  "description": "Encoding and decoding text files in a reliable way",
   "homepage": "https://www.reliabletxt.com",
   "repository": "github:Stenway/ReliableTXT-TS",
   "bugs": {
     "url": "https://github.com/Stenway/ReliableTXT-TS/issues"
   },
-  "main": "dist/src/index.js",
+  "exports": "./dist/src/index.js",
   "types": "dist/src/index.d.ts",
   "files": [
     "/dist/src"
   ],
+  "engines": {
+    "node": ">=14.16"
+  },
   "scripts": {
     "build": "tsc",
     "lint": "eslint src",
@@ -45,14 +49,14 @@
   "author": "Stefan John",
   "license": "MIT",
   "devDependencies": {
-    "@types/jest": "^29.2.4",
-    "@typescript-eslint/eslint-plugin": "^5.47.1",
-    "@typescript-eslint/parser": "^5.47.1",
-    "eslint": "^8.30.0",
-    "jest": "^29.3.1",
-    "ts-jest": "^29.0.3",
+    "@types/jest": "^29.5.1",
+    "@typescript-eslint/eslint-plugin": "^5.59.1",
+    "@typescript-eslint/parser": "^5.59.1",
+    "eslint": "^8.39.0",
+    "jest": "^29.5.0",
+    "ts-jest": "^29.1.0",
     "ts-node": "^10.9.1",
-    "tsconfig-paths": "^4.1.2",
-    "typescript": "^4.8.4"
+    "tsconfig-paths": "^4.2.0",
+    "typescript": "^5.0.4"
   }
 }
